# Quant_BTC

./: .env.example  .gitignore  README.md  btc_ml_strategy.ipynb  pyproject.toml
data/processed/: .gitkeep
data/raw/: .gitkeep
src/: __init__.py  analyzer.py  backtester.py  data_fetcher.py  exchange.py  feature_engineer.py  preprocessor.py  strategy.py
src/models/: __init__.py  base_model.py  lstm_model.py  xgb_model.py
